--- a/mozilla/security/jss/pkg/solaris/SUNWjssx/pkginfo.tmpl
+++ b/mozilla/security/jss/pkg/solaris/SUNWjssx/pkginfo.tmpl
@@ -25,6 +25,7 @@ EMAIL=""
 CLASSES="none"
 BASEDIR=/
 SUNW_PKGVERS="1.0"
+SUNW_ISA="sparcv9"
 #VSTOCK="<reserved by Release Engineering for package part #>"
 #ISTATES="<developer defined>"
 #RSTATES='<developer defined>'
