--- a/mozilla/embedding/components/printingui/src/mac/printpde/res/English.lproj/PrintPDE.nib/objects.xib
+++ b/mozilla/embedding/components/printingui/src/mac/printpde/res/English.lproj/PrintPDE.nib/objects.xib
@@ -4,66 +4,72 @@
   <object name="rootObject" class="NSCustomObject" id="1">
     <string name="customClass">NSApplication</string>
   </object>
-  <array count="9" name="allObjects">
+  <array count="11" name="allObjects">
     <object class="IBCarbonWindow" id="166">
-      <string name="windowRect">138 43 283 569 </string>
+      <string name="windowRect">195 570 431 1074 </string>
       <string name="title">Window</string>
       <object name="rootControl" class="IBCarbonRootControl" id="167">
-        <string name="bounds">0 0 145 526 </string>
+        <string name="bounds">0 0 236 504 </string>
         <array count="1" name="subviews">
-          <object class="IBCarbonUserPane" id="184">
-            <string name="bounds">0 0 109 484 </string>
-            <array count="5" name="subviews">
-              <object class="IBCarbonCheckBox" id="183">
-                <string name="bounds">13 286 31 409 </string>
+          <object class="IBCarbonUserPane" id="212">
+            <string name="bounds">0 0 216 478 </string>
+            <array count="8" name="subviews">
+              <object class="IBCarbonCheckBox" id="210">
+                <string name="bounds">20 117 38 325 </string>
                 <ostype name="controlSignature">MOZZ</ostype>
                 <int name="controlID">4002</int>
-                <string name="title">Print Selection</string>
+                <string name="title">Print Selection Only</string>
               </object>
-              <object class="IBCarbonGroupBox" id="190">
-                <string name="bounds">8 20 97 261 </string>
-                <array count="1" name="subviews">
-                  <object class="IBCarbonRadioGroup" id="191">
-                    <string name="bounds">25 36 86 245 </string>
-                    <ostype name="controlSignature">MOZZ</ostype>
-                    <int name="controlID">4001</int>
-                    <int name="numRows">3</int>
-                    <int name="intercellHeight">4</int>
-                    <array count="3" name="radioTitles">
-                      <array count="1">
-                        <string>Radio1</string>
-                      </array>
-                      <array count="1">
-                        <string>Radio2</string>
-                      </array>
-                      <array count="1">
-                        <string>Radio</string>
-                      </array>
-                    </array>
-                  </object>
-                </array>
-                <string name="title">Print Frames</string>
-              </object>
-              <object class="IBCarbonCheckBox" id="192">
-                <string name="bounds">39 286 53 464 </string>
+              <object class="IBCarbonCheckBox" id="211">
+                <string name="bounds">46 117 60 325 </string>
                 <ostype name="controlSignature">MOZZ</ostype>
                 <int name="controlID">4003</int>
                 <string name="title">Shrink To Fit Page Width</string>
-                <int name="initialState">1</int>
               </object>
-              <object class="IBCarbonCheckBox" id="193">
-                <string name="bounds">61 286 75 464 </string>
+              <object class="IBCarbonCheckBox" id="216">
+                <string name="bounds">82 117 96 325 </string>
                 <ostype name="controlSignature">MOZZ</ostype>
                 <int name="controlID">4004</int>
                 <string name="title">Print Background Colors</string>
-                <int name="initialState">1</int>
               </object>
-              <object class="IBCarbonCheckBox" id="194">
-                <string name="bounds">83 286 97 464 </string>
+              <object class="IBCarbonCheckBox" id="214">
+                <string name="bounds">104 117 118 325 </string>
                 <ostype name="controlSignature">MOZZ</ostype>
                 <int name="controlID">4005</int>
                 <string name="title">Print Background Images</string>
-                <int name="initialState">1</int>
+              </object>
+              <object class="IBCarbonRadioGroup" id="213">
+                <string name="bounds">135 116 196 325 </string>
+                <ostype name="controlSignature">MOZZ</ostype>
+                <int name="controlID">4001</int>
+                <int name="numRows">3</int>
+                <int name="intercellHeight">4</int>
+                <array count="3" name="radioTitles">
+                  <array count="1">
+                    <string>Radio1</string>
+                  </array>
+                  <array count="1">
+                    <string>Radio2</string>
+                  </array>
+                  <array count="1">
+                    <string>Radio</string>
+                  </array>
+                </array>
+              </object>
+              <object class="IBCarbonStaticText" id="218">
+                <string name="bounds">133 20 149 109 </string>
+                <string name="title">Frames:</string>
+                <int name="justification">-1</int>
+              </object>
+              <object class="IBCarbonStaticText" id="215">
+                <string name="bounds">20 20 36 109 </string>
+                <string name="title">Options:</string>
+                <int name="justification">-1</int>
+              </object>
+              <object class="IBCarbonStaticText" id="217">
+                <string name="bounds">80 20 96 109 </string>
+                <string name="title">Appearance:</string>
+                <int name="justification">-1</int>
               </object>
             </array>
             <ostype name="controlSignature">MOZZ</ostype>
@@ -74,24 +80,28 @@
       </object>
     </object>
     <reference idRef="167"/>
-    <reference idRef="183"/>
-    <reference idRef="184"/>
-    <reference idRef="190"/>
-    <reference idRef="191"/>
-    <reference idRef="192"/>
-    <reference idRef="193"/>
-    <reference idRef="194"/>
+    <reference idRef="210"/>
+    <reference idRef="211"/>
+    <reference idRef="212"/>
+    <reference idRef="213"/>
+    <reference idRef="214"/>
+    <reference idRef="215"/>
+    <reference idRef="216"/>
+    <reference idRef="217"/>
+    <reference idRef="218"/>
   </array>
-  <array count="9" name="allParents">
+  <array count="11" name="allParents">
     <reference idRef="1"/>
     <reference idRef="166"/>
-    <reference idRef="184"/>
+    <reference idRef="212"/>
+    <reference idRef="212"/>
     <reference idRef="167"/>
-    <reference idRef="184"/>
-    <reference idRef="190"/>
-    <reference idRef="184"/>
-    <reference idRef="184"/>
-    <reference idRef="184"/>
+    <reference idRef="212"/>
+    <reference idRef="212"/>
+    <reference idRef="212"/>
+    <reference idRef="212"/>
+    <reference idRef="212"/>
+    <reference idRef="212"/>
   </array>
   <dictionary count="2" name="nameTable">
     <string>File&apos;s Owner</string>
@@ -99,5 +109,5 @@
     <string>PrintPDE</string>
     <reference idRef="166"/>
   </dictionary>
-  <unsigned_int name="nextObjectID">195</unsigned_int>
+  <unsigned_int name="nextObjectID">219</unsigned_int>
 </object>
