--- a/mozilla/layout/html/document/src/forms.css
+++ b/mozilla/layout/html/document/src/forms.css
@@ -83,7 +83,7 @@ input {
   background-color: transparent;
   color: -moz-FieldText;
   font-family: Lucida Grande;
-  font-size: 11pt;
+  font-size: 11px;
   text-align: start;
   vertical-align: text-bottom;
   cursor: text;
@@ -135,7 +135,7 @@ select {
   border-style: inset !important;
   -moz-border-radius: 0 !important;
   font-family: Lucida Grande;
-  font-size: 11pt;
+  font-size: 11px;
 }
 
 select[size] {
@@ -373,7 +373,7 @@ input[type="submit"] {
   background-color: ButtonFace;
   color: ButtonText !important; 
   font-family: Lucida Grande;
-  font-size: 10pt;
+  font-size: 10px;
   white-space: pre;
   cursor: default;
   -moz-box-sizing: border-box;
